--------------------------------------------------------------------------------
 Fusion 1.213 - August 29th, 2004
--------------------------------------------------------------------------------
- 09-27-04: Can now kickban an online user from the server. [Tsusai].
- 09-27-04: REED: Abnormally missing database files crashed server. [AlexKreuz]
- 09-27-04: REED: Server crash when gamedata inventories contains unknown item. [AlexKreuz]
- 09-27-04: Fixed 100% CPU usage on player ALT-F4 disconnect. Infinite loop. [AlexKreuz]
- 09-27-04: Commented out Map unloading. Not working properly. [AlexKreuz]
- 09-27-04: Commented out PVP Calculations. Causes too many fatal problems. [AlexKreuz]
- 09-27-04: REED: Corruption of guild storage caused load error. [AlexKreuz]
- 09-27-04: #146: Can not exit chat room if multple users in it. [AlexKreuz]
- 09-27-04: Optimized memory clearing procedures. [AlexKreuz]
- 09-25-04: Corrected a mistake on INI. [Tsusai]
- 09-25-04: Uncommented Darkhelemet's MapUnload. [Tsusai]
- 09-25-04: Added MapUnload to the INI. [Tsusai]
- 09-25-04: Fixed problem with Areawarp. [Tsusai
- 09-25-04: Redid Character tab, added online users/functions. [Tsusai]
- 09-25-04: Added NPC Areawarp command. [Tsusai]
- 09-25-04: Redid character tab design. [Tsusai]
- 09-24-04: HP/SP checks in Character JCon Work. [Tsusai]
- 09-23-04: Disabled HP/SP conversion checks in JCon. [Tsusai]
- 09-23-04: Character Tab finished, GUI updated. [Tsusai]
- 09-22-04: Made Minamize to Tray a Windows OS only feature. [Tsusai]
- 09-22-04: Updated JCon's use of sockets to WSocket from WinSocket. [Tsusai]
- 09-22-04: Winsock isn't used in the http segment, commented out. [Tsusai]
- 09-21-04: Inability to resolve DNS caused freeze-crash. [AlexKreuz]
- 09-21-04: Cleaned up ISCS syntax. [AlexKreuz]
- 09-21-04: Moved ISCS Channel to #fusionservers. [AlexKreuz]
- 09-21-04: Removed weiss.ini LAN_IP field. Address retrieved automatically. [AlexKreuz]