@@ -2183,8 +2183,6 @@ Called when we're shutting down the server *only*
     function command_newplayer(str : String) : String;
     var
         sl : TStringList;
-        tp1, tp2 : TPlayer;
-        i, Idx : Integer;
     begin
         Result := 'GM_NEWPLAYER Failure.';
 
@@ -2199,35 +2197,8 @@ Called when we're shutting down the server *only*
             end else if (sl.strings[2] <> '1') and (sl.strings[2] <> '0') then begin
                 Result := Result + ' Gender can only be 1 (Male) or 2 (Female).';
             end else begin
-
-                i := 0;
-                Idx := 100101;
-
-    	    	for i := 0 to Player.Count - 1 do begin
-	            	tp2 := Player.Objects[i] as TPlayer;
-                	if (tp2.ID <> i + 100101) and (tp2.ID > 100100) then begin
-            	    	Idx := i + 100101;
-        	            Break;
-    	            end;
-	            end;
-
-            	if (i = Player.Count) then Idx := 100101 + Player.Count;
-
-                tp1 := TPlayer.Create;
-                tp1.ID := Idx;
-                tp1.Name := sl.Strings[0];
-                tp1.Pass := sl.Strings[1];
-                tp1.Mail := sl.Strings[3];
-                tp1.Gender := StrToInt(sl.Strings[2]);
-                tp1.Banned := 0;
-                tp1.ver2 := 9;
-
-                PlayerName.AddObject(tp1.Name, tp1);
-                Player.AddObject(tp1.ID, tp1);
-
-                PD_Save_Accounts(True);
-
-                Result := 'GM_NEWPLAYER Success. ' + tp1.Name + ' has been added successfully.';
+                create_account(sl.Strings[0], sl.Strings[1], sl.Strings[3], sl.Strings[2]);
+                Result := 'GM_NEWPLAYER Success. ' + sl.Strings[0] + ' has been added successfully.';
             end;
         end else begin
             Result := Result + ' Incomplete information. Syntax: #newplayer [username] [password] [gender 1|0] [email].';
